--- a/WebSharper.MongoLab/WebSharper.MongoLab.fsproj
+++ b/WebSharper.MongoLab/WebSharper.MongoLab.fsproj
@@ -25,7 +25,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <Name>IntelliFactory.WebSharper.MongoLab</Name>
+    <Name>WebSharper.MongoLab</Name>
     <RootNamespace>$(Name)</RootNamespace>
     <AssemblyName>$(Name)</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
