--- a/ivy.xml
+++ b/ivy.xml
@@ -1,6 +1,6 @@
 <ivy-module version="2.0">
-  <info organisation="IntelliFactory" module="websharper.mongolab" revision="3.0" />
+  <info organisation="IntelliFactory" module="zafir.mongolab" revision="3.0" />
   <dependencies>
-    <dependency name="websharper" rev="latest.integration" />
+    <dependency name="zafir" rev="latest.integration" />
   </dependencies>
 </ivy-module>
