--- a/nuget/WebSharper.MongoLab.paket.template.in
+++ b/nuget/WebSharper.MongoLab.paket.template.in
@@ -11,8 +11,8 @@ description
 tags
     Web JavaScript F# C#
 files
-    ../WebSharper.MongoLab/bin/Release/netstandard2.0/WebSharper.MongoLab.dll ==> lib/net461
-    ../WebSharper.MongoLab/bin/Release/netstandard2.0/WebSharper.MongoLab.xml ==> lib/net461
+    ../WebSharper.MongoLab/bin/Release/net461/WebSharper.MongoLab.dll ==> lib/net461
+    ../WebSharper.MongoLab/bin/Release/net461/WebSharper.MongoLab.xml ==> lib/net461
     ../WebSharper.MongoLab/bin/Release/netstandard2.0/WebSharper.MongoLab.dll ==> lib/netstandard2.0
     ../WebSharper.MongoLab/bin/Release/netstandard2.0/WebSharper.MongoLab.xml ==> lib/netstandard2.0
 dependencies
