--- a/nuget/WebSharper.MongoLab.paket.template
+++ b/nuget/WebSharper.MongoLab.paket.template
@@ -11,9 +11,8 @@ description
 tags
     Web JavaScript F# C#
 files
-    ../WebSharper.MongoLab/bin/Release/net461/WebSharper.MongoLab.dll ==> lib/net461
-    ../WebSharper.MongoLab/bin/Release/net461/WebSharper.MongoLab.xml ==> lib/net461
     ../WebSharper.MongoLab/bin/Release/netstandard2.0/WebSharper.MongoLab.dll ==> lib/netstandard2.0
     ../WebSharper.MongoLab/bin/Release/netstandard2.0/WebSharper.MongoLab.xml ==> lib/netstandard2.0
 dependencies
-        WebSharper ~> LOCKEDVERSION:[3]
+    framework: netstandard2.0
+            WebSharper ~> LOCKEDVERSION:[3]
